@@ -1,3 +1,15 @@
+2014-01-13  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r161808.
+        http://trac.webkit.org/changeset/161808
+        https://bugs.webkit.org/show_bug.cgi?id=126874
+
+        This patch make several files to be always regenerated on
+        every make (Requested by KaL on #webkit).
+
+        * GNUmakefile.am:
+        * bindings/gobject/GNUmakefile.am:
+
 2014-01-12  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r161843.
